sonarr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sonarr
  namespace: filme
spec:
  ports:
    - port: 8989
      targetPort: 8989
  selector:
    k8s-app: sonarr
