sonarr/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sonarr
  namespace: filme
spec:
  rules:
    - host: sonarr.stoicatedy.ovh
      http:
        paths:
          - path: /
            backend:
              serviceName: sonarr
              servicePort: 8989
